[package]
name = "rc"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # 告诉 Cargo 使用 `build.rs`

[build-dependencies]
bindgen = "0.70"   # 绑定生成工具的依赖
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies]
shut_up = "0.1.1"
proc_macro_rc = {path = "./lib/proc_macro_rc"}
libloading = "0.7" # 动态加载库的依赖
image = "0.24" # 构建bmp文件

[profile.dev]
debug = true

# cargo test -- --nocapture 测试并打印

#定义额外元数据,用于交叉编译
[package.metadata.cargo-xbuild]
rustc-link-search = [
    "D:/Lib/VulkanSDK/1.3.290.0/Lib",
]
rustc-link-lib = [
    "vulkan-1",
]